--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/nazmus-sakibb/fox-news-server/issues"
   },
-  "homepage": "https://github.com/nazmus-sakibb/fox-news-server#readme"
+  "homepage": "https://github.com/nazmus-sakibb/fox-news-server#readme",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
